# sst-train

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Dockerfile.txt  README.md  _res.txt  ai_studio_code.py  best_sst_convlstm.keras  downloaded_files.json  downloader.py  fastapi_app.py  final_sst_convlstm.keras  main.py  normalization_stats.npy  package-lock.json  package.json  prediction_result.npy  pyproject.toml  requirements.txt  train.py  train_with_history.py  upload_to_hf.py
data_subset/: sst_2026-02-22.nc  sst_2026-02-23.nc  sst_2026-02-24.nc  sst_2026-02-25.nc  sst_2026-02-26.nc  sst_2026-02-27.nc  sst_2026-02-28.nc  sst_2026-03-01.nc  sst_2026-03-02.nc  sst_2026-03-03.nc  sst_2026-03-04.nc  sst_2026-03-05.nc  sst_2026-03-06.nc  sst_2026-03-07.nc  sst_2026-03-08.nc  sst_2026-03-09.nc  sst_2026-03-10.nc  sst_2026-03-11.nc  sst_2026-03-12.nc  sst_2026-03-13.nc  sst_2026-03-14.nc  sst_2026-03-15.nc  sst_2026-03-16.nc  sst_2026-03-17.nc  sst_2026-03-18.nc
